--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Billyhuang
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, I'm Billyhuang!</h1>
+	<p>HI ! Here is my own blog.I'm a Chinese,so i use Chinese to write passapges.If u can not understand them,please use translate apps.</p>
 </div><!-- /.blurb -->
