--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Billyhuang
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Billyhuang!</h1>
-	<p>HI ! Here is my own blog.I'm a Chinese,so i use Chinese to write passapges.If u can not understand them,please use translate apps.</p>
+	<h1>Hi there, I'm Billyhuang!</h1></br>
+	<h1>大家好，我是Billyhuang!</h1>
+	<p>Hi! This is my own blog. I am Chinese, so I write articles in Chinese. If you don't understand, please translate them.</p></br>
+	<p>嗨!这是我自己的博客。<p>
 </div><!-- /.blurb -->
