--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,11 @@
-test ahhh
+---
+layout: default
+title: Billyhuang
+---
+<div class="blurb">
+	<h1>About</h1></br>
+	<h2>大家好，我是Billyhuang!</h2>
+	<p>一名Minecraft玩家，一名高中牲，一个啥都会一点的人</p></br>
+	<p>想更了解我？ 点下方Bilibili！</p></br>
+  <p>bilibili干杯=（ ゜- ゜）つロ 干杯~bilibili</p>
+</div><!-- /.blurb -->
